# Changing-Icons

./: CMakeLists.txt  CompileAndroid.bat  README.md  about.md  mod.json
.github/workflows/: multi-platform.yml
src/: CIConfigProperties.hpp  CIConstants.hpp  CIUtilities.cpp  CIUtilities.hpp  GJGarageLayer.cpp  IconConfigProperties.hpp  OpenConfigSetting.cpp  OpenConfigSetting.hpp  PlayerObject.cpp  Random.hpp  constants.hpp  main.cpp
src/class/: CCMenuItemTriToggler.cpp  CCMenuItemTriToggler.hpp  CCReference.hpp  CCVariableRef.hpp  CIConfigManager.cpp  CIConfigManager.hpp  CIConfigPopup.cpp  CIConfigPopup.hpp  CIManager.cpp  CIManager.hpp  CIVariableRef.hpp  ColorPicker.hpp  IconCell.cpp  IconCell.hpp  IconCellDelegate.hpp  IconListView.cpp  IconListView.hpp  PresetCell.cpp  PresetCell.hpp  Vector2.hpp  tribool.hpp
src/class/dropdown/: DropdownChoice.cpp  DropdownChoice.hpp  DropdownMenu.cpp  DropdownMenu.hpp
src/class/layer/: AddIconLayer.cpp  AddIconLayer.hpp  CustomColorPopup.cpp  CustomColorPopup.hpp  GlobalConfigLayer.cpp  GlobalConfigLayer.hpp  (+12 more)
src/hooks/: GJBaseGameLayer.cpp  GJBaseGameLayer.hpp  GJGarageLayer.cpp  GJGarageLayer.hpp  PlayLayer.cpp  PlayLayer.hpp  PlayerObject.cpp  PlayerObject.hpp
src/layer/: AddIconLayer.cpp  AddIconLayer.hpp  IconConfigLayer.cpp  IconConfigLayer.hpp
src/properties/: CIProperties.cpp  ConfigProperties.hpp  Enums.hpp  IconProperties.hpp  Preset.hpp  TempProperties.hpp  std_variant.hpp
src/settings/: Enums.hpp  GlobalSettings.hpp  IconSettings.hpp  PlayerColor.hpp  TabSettings.hpp  variant_serialization.hpp
